--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -1,10 +1,14 @@
 Andrew
  - make syscalls preemptible (kind of working)
- - create standard interrupt entry point 
-   - for each IDT entry, have a separate stub that pushes error code and trap number to stack before jumping to common context save code
+ - make command to autogenerate filesystem from folder. 
+   - should be able to call 'make drive' or smth and have it autogenerate the drive from the ./user folder
+ - capability to run automated tests within the OS
+   - for starters, can just look at return status code.
+   - afterwards, would like to be able to redirect entire output to file and compare byte-by-byte with expected
+   - could perhaps use all the jank-pl tests as a sanity check
 
 Steven
- - create filesystem
+ - create filesystem (L brain fog)
 
 Sanat Dubey @ UCLA
  - Fix stevens code (mandatory)
