--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -2,6 +2,8 @@ above all, WRITE MORE TESTS!!!
 
 overall goal : get jankos to run bare metal
 this means we need a graphic interface, and replace the bootloader with something I understand
+ok, next we have to consider from what we're going to boot from. Since writing to a hard drive is too hard, 
+  I decided that I would try to make bootable USBs. However, this requires that I implement USB drivers.
 
 - TODO
   - route serial io through interrupts
@@ -20,10 +22,9 @@ this means we need a graphic interface, and replace the bootloader with somethin
   - get jjc to run on jankos
     - rewrite compiler + assembler in jank
   - networking, able to make http requests to the outside world
-  - graphic interface
-    - implement vga terminal
-    - ability to get input directly from the keyboard
-    - seems like my laptop has PS/2 keyboard, we can go ahead and implement drivers for that
+  - USB drivers
+    - storage
+    - keyboard
 
 - done
   - finish rudimentary read/write filesystem
@@ -34,3 +35,7 @@ this means we need a graphic interface, and replace the bootloader with somethin
     - need to create TTY fd for io modification
     - also need to enable raw mode on linux side 
   - replace bootboot with custom bootloader
+  - graphic interface
+    - implement vga terminal
+    - ability to get input directly from the keyboard
+    - seems like my laptop has PS/2 keyboard, we can go ahead and implement drivers for that
