--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -4,6 +4,8 @@ overall goal : get jankos to run bare metal
 this means we need a graphic interface, and replace the bootloader with something I understand
 ok, next we have to consider from what we're going to boot from. Since writing to a hard drive is too hard, 
   I decided that I would try to make bootable USBs. However, this requires that I implement USB drivers.
+got some basic USB drivers working, can support storage devices that use SCSI BOT protocol. 
+  now just have to actually get a physical drive and reformat it so we can test on bare metal
 
 - TODO
   - route serial io through interrupts
@@ -23,8 +25,21 @@ ok, next we have to consider from what we're going to boot from. Since writing t
     - rewrite compiler + assembler in jank
   - networking, able to make http requests to the outside world
   - USB drivers
-    - storage
-    - keyboard
+    - error handling
+    - USB hubs
+      - pretty must just ability to handle complex USB device topology
+      - USB core should maintain the USB device tree, xHCI controller just here to manage slots
+    - HID keyboard
+    - hotplug support
+      - need to handle both unexpected connection and disconnection
+      - connection is relatively simple, just have something always polling events and do device indexing logic when we see a port connection event
+      - disconnection is tricky. USB core will keep track of the connection state and refcount for each device.
+        when a port disconnect event happens, we immediately update the connection state to disconnected, clean up the device xHCI side,
+        and any subsequent action on this device should return with ENODEV status without touching xHCI.
+        when all the references to the USB device are gone, then it's safe to completely dealloc the device. 
+      - hopefully a disconnect doesn't happen while we're indexing the device. However, I suppose we can introduce another
+        device status like, INITIALIZING or something, and if a disconnect event happens while initializing, then
+        we can just immediately dealloc the device. 
 
 - done
   - finish rudimentary read/write filesystem
@@ -39,3 +54,5 @@ ok, next we have to consider from what we're going to boot from. Since writing t
     - implement vga terminal
     - ability to get input directly from the keyboard
     - seems like my laptop has PS/2 keyboard, we can go ahead and implement drivers for that
+  - USB drivers
+    - SCSI BOT mass storage devices
