--- a/kernel/src/networking/todo
+++ b/kernel/src/networking/todo
@@ -1,5 +1,8 @@
-- get basic functionality for e1000
-- test rx and tx, polling
+NOW
+- implement network stack...
+- rethink how i write the networking stack with big endian -> little endian
+- also how i store ipv4 addresses, should probably change to u32 instead of u8[4]
+
+LATER
 - configure Interrupt Mask for later...
 - make generic network device
-- implement network stack...
