added ARP table and associated functionality, updated todo

--- a/kernel/src/networking/todo
+++ b/kernel/src/networking/todo
@@ -7,3 +7,5 @@ LATER
 - configure Interrupt Mask for later...
 - make generic network device
 - implement network stack...
+- make that arp entry lookup not suck
+- add expirations for arp entries, probably 60 seconds?
