--- a/kernel/src/networking/todo
+++ b/kernel/src/networking/todo
@@ -1,20 +1,18 @@
 NOW
 - implement network stack...
+- clean up syscalls, copy to and from user can fail. 
+- rewrite socket struct
+- add socketops struct
+- make udp work in user land
 - DNS
 - TCP (make andrew do this cause im no good)
 
 LATER
-- how i handle buffers for the tx rx, rn i just pre alloc the buffers and keep using them, i should copy phys hardware buffer to a malloc'd buffer and set the hardware flag so that it can keep recieving?
 - make that arp entry lookup not suck
 - add expirations for arp entries, probably 60 seconds?
 - generic network device? move all globals for nic driver to own struct, possible to have multiple of same cards? void* for driver struct in net interface?
 - add lease time to dhcp
-
-NOTES
-- rewrite socket struct
-- add socketops struct
-- make udp work in user land
-
+- clean up all the code.
 
 all the structs for networking that stay inside the kernel will keep everything in CPU order (little endian)
 all functions will take in CPU order (little endian)
