wired up the file ops for sockets

--- a/kernel/src/networking/todo
+++ b/kernel/src/networking/todo
@@ -1,4 +1,5 @@
 NOW
+- TEST SYSCALLS AND FILE OPS
 - implement network stack...
 - clean up syscalls, copy to and from user can fail. 
 - rewrite socket struct
