removed debug prints

--- a/kernel/src/networking/todo
+++ b/kernel/src/networking/todo
@@ -1,4 +1,5 @@
 NOW
+- standardize void* vs u8*
 - TEST SYSCALLS AND FILE OPS
 - add blocking, (flag, default behavior)
 - clean up syscalls, copy to and from user can fail. 
