--- a/kernel/src/networking/todo
+++ b/kernel/src/networking/todo
@@ -1,18 +1,16 @@
 NOW
-- standardize void* vs u8*
+- TCP
+- fill in states for UDP
 - TEST SYSCALLS AND FILE OPS
-- add blocking, (flag, default behavior)
-- clean up syscalls, copy to and from user can fail. 
+- add syscall flag handling
 
 LATER
 - DNS
-- TCP
 - make that arp entry lookup not suck
 - arp queuing time out ttl
 - add expirations for arp entries, probably 60 seconds?
 - add lease time to dhcp
 - generic network device? move all globals for nic driver to own struct, possible to have multiple of same cards? void* for driver struct in net interface?
-- clean up all the code.
 
 all the structs for networking that stay inside the kernel will keep everything in CPU order (little endian)
 all functions will take in CPU order (little endian)
