tcp (kinda) (part 2)

--- a/kernel/src/networking/todo
+++ b/kernel/src/networking/todo
@@ -2,6 +2,7 @@ NOW
 - TCP
 - tcp connect timeout, added more error codes inside struct?
 - fill in states for UDP
+- move packet stuff inside udp, we will be using void* to hold protocol specifics
 - TEST SYSCALLS AND FILE OPS
 - add syscall flag handling
 
