sin_port should be network byte order (BE)

--- a/kernel/src/networking/todo
+++ b/kernel/src/networking/todo
@@ -1,4 +1,5 @@
 NOW
+- tcp enforce backlog from listen on accept
 - tcp connect timeout, added more error codes inside struct?
 - fill in states for UDP
 - TEST SYSCALLS AND FILE OPS
